# natu

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  justfile
docs/es/: README.md
docs/lang/: readme.es.md
src/: core.rs  main.rs  tasks.rs
src/core/: interface.rs  interfaz.rs  router.rs  store.rs  trace.rs
src/task/commit/: prompt.ron  prompt.rs
src/tasks/: attach.rs
src/tasks/chat/: commands.rs  eval.rs  helpers.rs  input.rs  lang.rs  mod.rs  parse.rs  prompt.rs  task.rs
src/tasks/commit/: format.rs  git.rs  mod.rs  prompts.rs  task.rs
src/tasks/message/: task.rs
src/tasks/pipeline/: mod.rs  task.rs
src/utils/: lang.rs  mod.rs
