[package]
authors = ["Hash <hashbangcore@duck.com>"]
categories = ["command-line-utilities"]
description = "A CLI for LLMs, built for advanced GNU/Linux users."
edition = "2024"
keywords = ["cli", "llm", "linux"]
license = "BSD-2-Clause"
license-file = "LICENSE"
name = "netero"
readme = "README.md"
repository = "https://github.com/hashbangcore/netero"
version = "0.1.1"

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive", "env"] }
clap_complete = "4"
futures-util = "0.3.31"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
rustyline = "17.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
termimad = "0.34.1"
terminal_size = "0.4.3"
tokio = { version = "1.49.0", features = ["full"] }
